Fixed some alignment issues in /apc/ and also should have fixed the CSV generating code too.

--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,8 @@ body {
 
 code { /* This could be made more like Jekyll on Github pages. Just remember the <pre> tag */
   color: #90EE90;
+  display: inline-block;
+  text-align: left;
 }
 
 pre {
